feature:add training logic

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,7 @@
 absl_py==2.1.0
 accelerate==0.32.1
-braceexpand=0.1.7
-Calvin.egg==info
-calvin_env==0.0.1
-git+https://github.com/moojink/dlimp_openvla
+braceexpand==0.1.7
+dlimp@git+https://github.com/moojink/dlimp_openvla
 draccus==0.8.0
 einops==0.8.1
 ema_pytorch==0.5.1
@@ -19,7 +17,6 @@ moviepy==1.0.3
 numpy==1.26.4
 omegaconf==2.3.0
 opencv_python==4.10.0.84
-openvla==0.0.3
 packaging==24.1
 peft==0.11.1
 Pillow==11.2.1
@@ -27,10 +24,9 @@ piq==0.8.0
 pyquaternion==0.9.9
 pytorch_lightning==1.8.6
 PyYAML==6.0.1
-PyYAML==6.0.2
 Requests==2.32.3
 rich==14.0.0
-robosuite==1.4.1
+robosuite==1.5.1
 rotary_embedding_torch==0.8.4
 setuptools==57.5.0
 tensorflow==2.15.0
@@ -44,3 +40,4 @@ torchvision==0.17.0
 tqdm==4.66.4
 transformers==4.40.1
 webdataset==0.2.111
+wandb
